--- a/src/index.css
+++ b/src/index.css
@@ -397,5 +397,8 @@ nav a {
   font-size: 20px;
   color: var( --dsc-color-font-primary);
   margin-bottom: 20px;
+}
 
+.dsc-dialog-btn-container {
+  width: 100%;
 }
