--- a/src/index.css
+++ b/src/index.css
@@ -243,18 +243,24 @@ nav a {
   outline: none;
 }
 
+
 .dsc-form-control::placeholder {
   color: var(--dsc-color-font-placeholder);
 }
 
-.dsc-input-error {
+.dsc-form-control[data-invalid="true"] {
   border: 1px solid var(--dsc-color-error);
 }
+
+.dsc-form-control[data-invalid="true"] ~ div {
+  display: unset;
+  }
 
 .dsc-form-error {
   color: var(--dsc-color-error);
   font-size: 12px;
   padding-left: 4px;
+  display: none;
 }
 
 .dsc-select:invalid {
